--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -10,6 +10,11 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+
+    role_hierarchy:
+        ROLE_AUTHOR:    ROLE_USER
+        ROLE_ADMIN:     ROLE_AUTHOR
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -34,5 +39,6 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+       - { path: ^/article, roles: ROLE_AUTHOR }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
